# forecasting-sales-for-a-restaurant

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  pyproject.toml
.dvc/tmp/: lock
config/: main.yaml
config/model/: model1.yaml
data/: raw.parquet
data/conversion/: README.md
notebooks/: analyze_results.ipynb  mlflow.ipynb  train_cv.ipynb
src/: error_analysis.py  pipeline.py  process.py  select_regressor.py  train_hyperopt.py  train_model.py  transformers.py  utils.py
